Fix clipping and scrolling of the source showcase sidebar (#4213)

--- a/app/components-react/windows/source-showcase/SourceShowcase.m.less
+++ b/app/components-react/windows/source-showcase/SourceShowcase.m.less
@@ -2,22 +2,11 @@
   width: 100%;
   height: 100%;
   padding: 24px;
-  padding-top: 64px;
   background: var(--section);
-
-  .image-container {
-    min-height: 200px;
-    overflow: hidden;
-    position: relative;
-  }
 
   img, video {
     width: 100%;
     height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
 }
 
